--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.6"
+  },
   "scripts": {
+    "start": "node backend/server",
+    "server": "nodemon backend/server",
+    "client" : "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
