--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "checkin system for visitors",
   "main": "server.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "react-calendar": "^3.2.0",
     "react-dom": "^17.0.1",
@@ -17,7 +18,7 @@
   "scripts": {
     "start": "node backend/server",
     "server": "nodemon backend/server",
-    "client" : "npm start --prefix frontend",
+    "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
