--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.11.2",
     "react-calendar": "^3.2.0",
     "react-dom": "^17.0.1",
     "react-router-bootstrap": "^0.25.0",
