--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.2",
     "react-calendar": "^3.2.0",
     "react-dom": "^17.0.1",
