--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.2",
+    "path": "^0.12.7",
     "react-calendar": "^3.2.0",
     "react-dom": "^17.0.1",
     "react-router-bootstrap": "^0.25.0",
@@ -28,6 +29,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node backend/seeder",
     "data:destroy": "node backend/seeder -d",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
